style: enhance scrollbar customization and ensure consistent font usage

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,3 +1,5 @@
+@import url('../../shared//lib/assets/fonts/fonts.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,6 +16,17 @@
     }
 }
 
+body {
+    font-family: 'Inter', sans-serif;
+}
+
+.hide-password-toggle::-ms-reveal,
+.hide-password-toggle::-ms-clear {
+    visibility: hidden;
+    pointer-events: none;
+    display: none;
+}
+
 .quotes-none {
     quotes: none;
 }
@@ -26,11 +39,26 @@ html {
     overscroll-behavior: none;
 }
 
-/* styles above for html and body need to prevent elastic scrolling on iOS Safari */
+/* custom scrollbar */
 
-.hide-password-toggle::-ms-reveal,
-.hide-password-toggle::-ms-clear {
-    visibility: hidden;
-    pointer-events: none;
-    display: none;
+::-webkit-scrollbar {
+    width: 16px;
 }
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+    opacity: 50%;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #424242;
+}
+
+/* custom scrollbar */
